changed env sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5430/webz_db?schema=public"
-API_KEY="d0b47d26-1f02-4f23-8f6c-94552232cb16"
+API_KEY=
 API_URL="https://api.webz.io"
 DB_USER="postgres"
 DB_PASSWORD="postgres"
